<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorFragment">

    <LinearLayout
        android:id="@+id/liner_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/view_sum_credit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/sum_credit" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_sum_credit"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/view_interest_rate"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/interest_rate" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_interest_rate"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/view_credit_term"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/credit_term" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_credit_term"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:text="@string/overpayment" />

            <TextView
                android:id="@+id/view_overpayment"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:text="@string/total_payment" />

            <TextView
                android:id="@+id/view_total_payment"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:text="@string/payment" />

            <TextView
                android:id="@+id/view_payment"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Расчитать"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/liner_id" />


</androidx.constraintlayout.widget.ConstraintLayout>